# TUIcGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  compile.sh  global_version_variables.hpp  main.cpp
lib/: cmd_logic.cpp  cmd_logic.hpp  cursed_drawing.c  cursed_drawing.h  irc_logic.cpp  irc_logic.hpp  menu_logic.cpp  menu_logic.hpp  settings_menu.cpp  settings_menu.hpp  txt_reader.c  txt_reader.h  txt_writer.c
resources/: helpmsg.txt
src/: main.cpp  server.cpp
src/lib/: cmd_logic.cpp  cmd_logic.hpp  code_reading.cpp  code_reading.hpp  cursed_drawing.c  cxx_utils.cpp  cxx_utils.hpp  game_elements.cpp  game_elements.hpp  menu_logic.cpp  settings_menu.cpp  settings_menu.hpp  txt_writer.h
